// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`function: ClientEventRawFactory > should generate realistic client event entries for ALL in US_MI 1`] = `
[
  {
    "attributes": {
      "code": "TECHNICAL",
      "description": "Conor coma uberrime utrum spes adnuo laboriosam suasoria tredecim color.",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "ALL",
  },
  {
    "attributes": {
      "code": "FELONY",
      "description": "Claudeo spiculum curiositas statim brevis inflammatio ubi tabgo desidero.",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "ALL",
  },
  {
    "attributes": {
      "code": "FELONY",
      "description": "Asporto occaecati curvo aduro clam tabernus civitas crinis rem.",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "ALL",
  },
]
`;

exports[`function: ClientEventRawFactory > should generate realistic client event entries for ALL in US_XX 1`] = `
[
  {
    "attributes": {
      "code": "PYTJJ",
      "description": "Cursus terminatio auditor abduco utrum utrum non amaritudo doloremque.",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "ALL",
  },
  {
    "attributes": {
      "code": "MTXIQ",
      "description": "Usitas vindico debeo allatus tandem thymum confero artificiose uredo.",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "ALL",
  },
  {
    "attributes": {
      "code": null,
      "description": "Uter dapifer summisse depraedor cohors.",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "ALL",
  },
]
`;

exports[`function: ClientEventRawFactory > should generate realistic client event entries for treatment_referrals in US_MI 1`] = `
[
  {
    "attributes": {
      "code": "TECHNICAL",
      "description": "TRANSPORTATION (PUBLIC TRANSPORTATION)",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "treatment_referrals",
  },
  {
    "attributes": {
      "code": "NON-TECHNICAL",
      "description": "SHELTER/RESIDENTIAL/HOUSING (TRANSITIONAL HOUSING)",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "treatment_referrals",
  },
  {
    "attributes": {
      "code": "TECHNICAL",
      "description": "EMPLOYMENT (EMPLOYMENT WORKSHOPS)",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "treatment_referrals",
  },
]
`;

exports[`function: ClientEventRawFactory > should generate realistic client event entries for treatment_referrals in US_XX 1`] = `
[
  {
    "attributes": {
      "code": "FPMQD",
      "description": "Vigor amicitia vigilo thema comptus color clam atavus uxor.",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "treatment_referrals",
  },
  {
    "attributes": {
      "code": "TWPIF",
      "description": "Cunae confero vir callide assentator.",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "treatment_referrals",
  },
  {
    "attributes": {
      "code": "XWFNE",
      "description": "Succedo doloremque rem victus bene condico.",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "treatment_referrals",
  },
]
`;

exports[`function: ClientEventRawFactory > should generate realistic client event entries for violation_responses in US_MI 1`] = `
[
  {
    "attributes": {
      "code": "FELONY",
      "description": "ISSUE #2 PAROLE WARRANT",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "violation_responses",
  },
  {
    "attributes": {
      "code": "FELONY",
      "description": "REINSTATE PAROLE",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "violation_responses",
  },
  {
    "attributes": {
      "code": "NON-TECHNICAL",
      "description": "ISSUE #2 PAROLE WARRANT",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "violation_responses",
  },
]
`;

exports[`function: ClientEventRawFactory > should generate realistic client event entries for violation_responses in US_XX 1`] = `
[
  {
    "attributes": {
      "code": null,
      "description": "Suasoria tredecim color despecto ulciscor claudeo spiculum.",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "violation_responses",
  },
  {
    "attributes": {
      "code": "RFOWT",
      "description": "Tersus asporto occaecati curvo aduro clam.",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "violation_responses",
  },
  {
    "attributes": {
      "code": "HKQVI",
      "description": "Uter optio sub atavus exercitationem ut turba voluptas.",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "violation_responses",
  },
]
`;

exports[`function: ClientEventRawFactory > should generate realistic client event entries for violations in US_MI 1`] = `
[
  {
    "attributes": {
      "code": "NON-TECHNICAL",
      "description": "Crebro creber circumvenio taedium capitulus debitis vacuus.",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "violations",
  },
  {
    "attributes": {
      "code": "TECHNICAL",
      "description": "Tempore cura caelum curia advoco patior tui vapulus averto.",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "violations",
  },
  {
    "attributes": {
      "code": "FELONY",
      "description": "Cattus usque acceptus ipsam eum vesica cariosus adversus veniam utilis.",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "violations",
  },
]
`;

exports[`function: ClientEventRawFactory > should generate realistic client event entries for violations in US_XX 1`] = `
[
  {
    "attributes": {
      "code": "KGWKO",
      "description": "Cunabula amet esse.",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "violations",
  },
  {
    "attributes": {
      "code": "KTAPQ",
      "description": "Vulnus pel desipio considero arbitro tenax usitas.",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "violations",
  },
  {
    "attributes": {
      "code": "YSSPW",
      "description": "Adhuc thesaurus vulgaris antepono aranea aeger confugo theca maxime talio.",
    },
    "eventDate": 2023-01-01T00:00:00.000Z,
    "metricId": "violations",
  },
]
`;
